# 0g-tapp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.multi  README.md
.github/workflows/: ci.yml
docs/: AWS_ADMIN_REQUEST.md  AWS_NITRO_PORT_TECHNICAL_GUIDE.md  PRD_0G_TAPP_AWS_PORT.md  PROJECT_SPEC_FOR_PM.md  SAFE_UPDATE_PROCEDURE.md
examples/: add_to_whitelist.sh  config-enclave.toml  config.json  config.toml  docker_login.sh  docker_logout.sh  get_app_container_status.sh  get_app_info.sh  get_app_key.sh  get_app_log.sh  get_app_secret_key.sh  get_evidence.sh  get_service_logs.sh  get_service_status.sh  get_tapp_info.sh  get_task_status.sh  list_app_measurements.sh  list_whitelist.sh  nginx-docker-compose.yml  nginx.conf  prune_images.sh  remove_from_whitelist.sh  sign_message.py  start_app.sh  start_service.sh  stop_app.sh  stop_service.sh  withdraw_balance.sh
perpdex-tapp/: deploy.sh  docker-compose.yml  parent-setup.sh
perpdex-tapp/configs/: api-config.toml  init-db.sql  price-oracle-default.toml  settlement-galileo.toml
proto/: tapp_service.proto
scripts/: build-eif.sh  deploy-enclave.sh  docker-proxy-parent.py  enclave-init.sh  gen-tls-cert.sh  run-enclave.sh
src/: auth_layer.rs  balance_withdrawal.rs  cli.rs  config.rs  docker_proxy.rs  error.rs  lib.rs  main.rs  measurement_service.rs  nonce_manager.rs  permission.rs  signature_auth.rs  tx_validator.rs  update_safety.rs  utils.rs
src/app_key/: kms_persistence.rs  mod.rs
src/boot/: compose_validator.rs  manager.rs  measurement.rs  mod.rs  task_manager.rs
src/service_monitor/: logs.rs
src/tee/: error.rs  factory.rs  mod.rs  nitro.rs  provider.rs  simulation.rs  tdx.rs  types.rs
